content/docs/v2026.6.19/guides/weaviate/scaling/vertical-scaling/vertical-scaling.md
---
title: Scale Weaviate Vertically
menu:
  docs_v2026.6.19:
    identifier: weaviate-vertical-scaling-ops
    name: Scale Vertically
    parent: weaviate-vertical-scaling
    weight: 20
menu_name: docs_v2026.6.19
section_menu_id: guides
info:
  autoscaler: v0.50.0
  cli: v0.65.0
  dashboard: v0.41.0
  installer: v2026.6.19
  ops-manager: v0.52.0
  product: kubedb
  provisioner: v0.65.0
  schema-manager: v0.41.0
  ui-server: v0.41.0
  version: v2026.6.19
  webhook-server: v0.41.0
---

> New to KubeDB? Please start [here](/docs/v2026.6.19/README).

# Vertical Scale Weaviate Cluster

This guide will show you how to use the `KubeDB` Ops Manager to update the resources (CPU and Memory) of a Weaviate cluster.

## Before You Begin

- At first, you need to have a Kubernetes cluster, and the `kubectl` command-line tool must be configured to communicate with your cluster.

- Install `KubeDB` in your cluster following the steps [here](/docs/v2026.6.19/setup/README).

- You should be familiar with the following `KubeDB` concepts:
  - [Weaviate](/docs/v2026.6.19/guides/weaviate/concepts/weaviate)
  - [Vertical Scaling Overview](/docs/v2026.6.19/guides/weaviate/scaling/vertical-scaling/overview)

To keep things isolated, this tutorial uses a separate namespace called `demo` throughout this tutorial.

```bash
$ kubectl create ns demo
namespace/demo created
```

> **Note:** YAML files used in this tutorial are stored in [docs/examples/weaviate/scaling/vertical-scaling](https://github.com/kubedb/docs/tree/{{< param "info.version" >}}/docs/examples/weaviate/scaling/vertical-scaling) folder in GitHub repository [kubedb/docs](https://github.com/kubedb/docs).

## Deploy Weaviate

In this section, we are going to deploy a Weaviate cluster using KubeDB. Then, in the next section we will update the resources using a `WeaviateOpsRequest`.

```yaml
apiVersion: kubedb.com/v1alpha2
kind: Weaviate
metadata:
  name: weaviate-sample
  namespace: demo
spec:
  version: 1.33.1
  replicas: 3
  storageType: Durable
  storage:
    storageClassName: longhorn
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
  podTemplate:
    spec:
      containers:
        - name: weaviate
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
  deletionPolicy: WipeOut
```

Let's create the `Weaviate` CR and wait for it to become `Ready`:

```bash
$ kubectl create -f https://github.com/kubedb/docs/raw/{{< param "info.version" >}}/docs/examples/weaviate/scaling/vertical-scaling/weaviate.yaml
weaviate.kubedb.com/weaviate-sample created

$ kubectl get weaviate -n demo
NAME              TYPE                  VERSION   STATUS   AGE
weaviate-sample   kubedb.com/v1alpha2   1.33.1    Ready    5m
```

Let's check the current resources of one of the pods:

```bash
$ kubectl get pod -n demo weaviate-sample-0 -o jsonpath='{.spec.containers[0].resources}'
{"limits":{"cpu":"500m","memory":"1Gi"},"requests":{"cpu":"500m","memory":"1Gi"}}
```

## Apply Vertical Scaling on the Weaviate Cluster

Here, we are going to update the resources of the cluster to meet the resources after vertical scaling.

```yaml
apiVersion: ops.kubedb.com/v1alpha1
kind: WeaviateOpsRequest
metadata:
  name: wvops-vertical-scale
  namespace: demo
spec:
  type: VerticalScaling
  databaseRef:
    name: weaviate-sample
  verticalScaling:
    node:
      resources:
        requests:
          memory: "2Gi"
          cpu: "1"
        limits:
          memory: "2Gi"
          cpu: "1"
  timeout: 5m
  apply: IfReady
```

- `spec.type` specifies that this is a `VerticalScaling` operation.
- `spec.databaseRef.name` specifies that we are performing the operation on `weaviate-sample`.
- `spec.verticalScaling.node` specifies the desired resources for the Weaviate nodes after scaling.

Let's create the `WeaviateOpsRequest` CR:

```bash
$ kubectl create -f https://github.com/kubedb/docs/raw/{{< param "info.version" >}}/docs/examples/weaviate/scaling/vertical-scaling/ops-request.yaml
weaviateopsrequest.ops.kubedb.com/wvops-vertical-scale created
```

The Ops Manager will update the PetSet resources and restart the pods one by one to apply the new resources.

```bash
$ kubectl get weaviateopsrequest -n demo wvops-vertical-scale
NAME                   TYPE              STATUS       AGE
wvops-vertical-scale   VerticalScaling   Successful   2m
```

Let's look at the `status.conditions` of the `WeaviateOpsRequest`:

```bash
$ kubectl get weaviateopsrequest -n demo wvops-vertical-scale -o yaml
apiVersion: ops.kubedb.com/v1alpha1
kind: WeaviateOpsRequest
metadata:
  name: wvops-vertical-scale
  namespace: demo
spec:
  apply: IfReady
  databaseRef:
    name: weaviate-sample
  maxRetries: 1
  timeout: 5m
  type: VerticalScaling
  verticalScaling:
    node:
      resources:
        limits:
          cpu: "1"
          memory: 2Gi
        requests:
          cpu: "1"
          memory: 2Gi
status:
  conditions:
  - message: Weaviate ops-request has started to vertically scaling the Weaviate nodes
    reason: VerticalScaling
    status: "True"
    type: VerticalScaling
  - message: Successfully updated PetSets Resources
    reason: UpdatePetSets
    status: "True"
    type: UpdatePetSets
  - message: get pod; ConditionStatus:True; PodName:weaviate-sample-0
    status: "True"
    type: GetPod--weaviate-sample-0
  - message: evict pod; ConditionStatus:True; PodName:weaviate-sample-0
    status: "True"
    type: EvictPod--weaviate-sample-0
  - message: running pod; ConditionStatus:True; PodName:weaviate-sample-0
    status: "True"
    type: RunningPod--weaviate-sample-0
  - message: get pod; ConditionStatus:True; PodName:weaviate-sample-1
    status: "True"
    type: GetPod--weaviate-sample-1
  - message: evict pod; ConditionStatus:True; PodName:weaviate-sample-1
    status: "True"
    type: EvictPod--weaviate-sample-1
  - message: running pod; ConditionStatus:True; PodName:weaviate-sample-1
    status: "True"
    type: RunningPod--weaviate-sample-1
  - message: get pod; ConditionStatus:True; PodName:weaviate-sample-2
    status: "True"
    type: GetPod--weaviate-sample-2
  - message: evict pod; ConditionStatus:True; PodName:weaviate-sample-2
    status: "True"
    type: EvictPod--weaviate-sample-2
  - message: running pod; ConditionStatus:True; PodName:weaviate-sample-2
    status: "True"
    type: RunningPod--weaviate-sample-2
  - message: Successfully Restarted Pods With Resources
    reason: RestartPods
    status: "True"
    type: RestartPods
  - message: Successfully completed the vertical scaling for Weaviate
    reason: Successful
    status: "True"
    type: Successful
  observedGeneration: 1
  phase: Successful
```

Now, let's verify the resources of the cluster have been updated:

```bash
$ kubectl get pod -n demo weaviate-sample-0 -o jsonpath='{.spec.containers[0].resources}'
{"limits":{"cpu":"1","memory":"2Gi"},"requests":{"cpu":"1","memory":"2Gi"}}

$ kubectl get weaviate -n demo weaviate-sample -o jsonpath='{.spec.podTemplate.spec.containers[0].resources}'
{"limits":{"cpu":"1","memory":"2Gi"},"requests":{"cpu":"1","memory":"2Gi"}}
```

The resources have been updated successfully.

## Next Steps

- Detail concepts of [Weaviate object](/docs/v2026.6.19/guides/weaviate/concepts/weaviate).
- [Horizontal Scaling](/docs/v2026.6.19/guides/weaviate/scaling/horizontal-scaling/horizontal-scaling) of a Weaviate cluster.
- Want to hack on KubeDB? Check our [contribution guidelines](/docs/v2026.6.19/CONTRIBUTING).

## Cleaning Up

To clean up the Kubernetes resources created by this tutorial, run:

```bash
$ kubectl delete weaviateopsrequest -n demo wvops-vertical-scale
$ kubectl delete weaviate -n demo weaviate-sample
$ kubectl delete ns demo
```
